[package]
name = "setwaker"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.1", default-features = false }

[target.'cfg(not(feature = "std"))'.dependencies]
hashbrown = "0.6.3"
lock_api = "0.3.3"

[features]
default = ["std"]
std = []
